исправление фокуса и ховера в шапке

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -248,6 +247,14 @@ body {
   display: flex;
   gap: 12px;
 }
+@media (min-width: 1023.99px) {
+  .adress-block:hover {
+    color: #FED84C;
+  }
+  .adress-block:hover svg path {
+    fill: #FED84C;
+  }
+}
 .adress-block:active {
   color: #f8c819;
 }
@@ -258,7 +265,6 @@ body {
 .header-contact {
   display: flex;
   gap: 15px;
-  /*============разобраться с ACTIVE==============*/
 }
 .header-contact__icon {
   display: block;
@@ -275,29 +281,30 @@ body {
   line-height: 1.5;
   text-align: right;
 }
-.header-contact:active {
-  color: #19f876;
-}
-.header-contact:active svg path {
-  fill: #19f863;
-}
-
 @media (min-width: 1023.99px) {
-  .header-contact:hover,
-  .adress-block:hover {
+  .header-contact:hover {
     color: #FED84C;
   }
-  .header-contact:hover svg path,
-  .adress-block:hover svg path {
+  .header-contact:hover svg path {
     fill: #FED84C;
   }
 }
+.header-contact:active {
+  color: #f8c819;
+}
+.header-contact:active svg path {
+  fill: #f8c819;
+}
+
 @media (max-width: 679.99px) {
   .header {
     padding-block: 15px;
   }
   .header-body__contacts {
     gap: 20px;
+  }
+  .header-body__name {
+    font-size: 18px;
   }
   .adress-block__icon {
     width: 41px;
@@ -313,4 +320,3 @@ body {
     display: none;
   }
 }
-/**/
