--- a/css/style.css
+++ b/css/style.css
@@ -165,9 +165,9 @@ body {
   padding-inline: 44px;
   padding-block: 50px;
 }
-@media (max-width: 860px) {
+@media (max-width: 1024px) {
   .item-card__body {
-    padding-inline: 30px;
+    padding-inline: 20px;
     padding-block: 40px;
   }
 }
@@ -207,11 +207,28 @@ body {
   position: relative;
 }
 .main__bg {
-  z-index: -1;
+  z-index: -2;
+}
+@media (max-width: 860px) {
+  .main__bg {
+    filter: brightness(40%);
+  }
 }
 .main__body {
   padding-block-start: 188px;
   padding-block-end: 525px;
+}
+@media (max-width: 860px) {
+  .main__body {
+    padding-block-start: 60px;
+    padding-block-end: 150px;
+  }
+}
+@media (max-width: 680px) {
+  .main__body {
+    padding-block-start: 50px;
+    padding-block-end: 60px;
+  }
 }
 
 .header {
@@ -220,6 +237,7 @@ body {
   color: #fff;
   border-bottom: 1px solid #7E868E;
 }
+
 .header-body {
   display: grid;
   grid-template-columns: 1fr auto;
@@ -243,6 +261,7 @@ body {
   font-size: 12px;
   line-height: 1.5;
 }
+
 .adress-block {
   display: flex;
   gap: 12px;
@@ -320,3 +339,70 @@ body {
     display: none;
   }
 }
+.content-body {
+  max-width: 647px;
+}
+@media (max-width: 860px) {
+  .content-body {
+    max-width: 480px;
+  }
+}
+.content-body__title {
+  padding-block: 24px;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  color: #fff;
+}
+@media (max-width: 860px) {
+  .content-body__title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 680px) {
+  .content-body__title {
+    font-size: 32px;
+    line-height: 1.5;
+  }
+}
+.content-body__subtitle {
+  padding-block-end: 40px;
+  font-size: 24px;
+  line-height: 1.43;
+  color: #fff;
+}
+@media (max-width: 860px) {
+  .content-body__subtitle {
+    font-size: 18px;
+  }
+}
+@media (max-width: 680px) {
+  .content-body__subtitle {
+    font-size: 14px;
+  }
+}
+.content-body__btn-and-text {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+@media (max-width: 860px) {
+  .content-body__btn-and-text {
+    flex-direction: column;
+    align-items: start;
+  }
+}
+.content-body__text {
+  max-width: 150px;
+  color: #fff;
+  font-size: 15px;
+  line-height: 1.6;
+}
+@media (max-width: 860px) {
+  .content-body__text {
+    max-width: 100%;
+  }
+}
+
+/*================================================*/
