--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,6 +65,10 @@ body {
     padding-block: 10px;
     border-radius: 5px;
     background: #F2F6FA;
+    font-size: 11px;
+    text-transform: uppercase;
+    line-height: 1.5;
+    letter-spacing: 10%;
 }
 
 
@@ -452,6 +456,82 @@ body {
 
 /*================================================*/
 
+.order-from-mobile {
+    padding-block-start: 330px;
+    background: #081130;
+    position: relative;
+    display: flex;
+
+    &::before {
+        position: absolute;
+        content: '';
+        top: 0px;
+        left: 0;
+        width: 100%;
+        height: 330px;
+        background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+    }
+
+    &::after {
+        position: absolute;
+        content: '';
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 489px;
+        background: url(../img/02\ 1.png) 0 0/cover no-repeat;
+    }
+
+    &__container {
+       
+    }
+
+    &__content {
+        //display: flex;
+    }
+
+    &__image {
+        position: relative;
+       // margin-left: -112px;
+        width: 1090px;
+        height: 1034px;
+        img {
+            object-position: 100%;
+        }
+        
+    }
+
+    &__info {
+    }
+}
+.info-mobile-order {
+   // max-width: 481px;
+    //margin-inline-start: 84px;
+    &__label {
+        margin-block-end: 24px;
+    }
+
+    &__title {
+
+        font-size: 48px;
+        color: #fff;
+        font-weight: 500;
+        letter-spacing: -1px;
+        line-height: 60px;
+        margin-block-end: 24px;
+    }
+
+    &__text {
+        color: #fff;
+        font-size: 21px;
+        line-height: 1.43;
+        letter-spacing: -0.2px;
+        margin-block-end: 40px;
+    }
+
+    &__button {
+    }
+}
 
 
 
