--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 body {
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat;
   color: #2E363E;
 }
 
@@ -59,9 +59,11 @@ body {
 .title {
   font-size: 48px;
   font-weight: 500;
+  letter-spacing: -1px;
 }
 
 .btn {
+  font-family: Montserrat;
   cursor: pointer;
   display: inline-flex;
   justify-content: center;
@@ -74,6 +76,7 @@ body {
   font-size: 18px;
   font-weight: 500;
   line-height: 1.52;
+  letter-spacing: 1.2;
   transition: background-color, 0.3s;
 }
 .btn:hover {
@@ -110,16 +113,18 @@ body {
   font-size: 11px;
   text-transform: uppercase;
   line-height: 1.5;
-  letter-spacing: 10%;
+  letter-spacing: 1px;
 }
 
 /*===================Catalog=============================*/
 .catalog {
   position: relative;
   overflow: hidden;
+  margin-top: -55px;
 }
 .catalog__title {
-  margin-block-end: 80px;
+  padding-block-start: 0px;
+  padding-block-end: 80px;
   text-align: center;
 }
 @media (max-width: 860px) {
@@ -455,15 +460,16 @@ body {
 
 /*================================================*/
 .order-from-mobile {
-  padding-block-start: 330px;
+  padding-block-start: 300px;
   background: #081130;
   position: relative;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .order-from-mobile::before {
   position: absolute;
   content: "";
-  top: 0px;
+  top: -30px;
   left: 0;
   width: 100%;
   height: 330px;
@@ -480,12 +486,17 @@ body {
 }
 .order-from-mobile__image {
   position: relative;
-  width: 1090px;
-  height: 1034px;
+  min-height: 1034px;
 }
-.order-from-mobile__image img {
-  -o-object-position: 100%;
-     object-position: 100%;
+.order-from-mobile__image .image {
+  -o-object-position: right;
+     object-position: right;
+}
+.order-from-mobile__content {
+  max-width: 590px;
+  padding-inline-start: 84px;
+  padding-inline-end: 15px;
+  padding-block-start: 109px;
 }
 .info-mobile-order__label {
   margin-block-end: 24px;
@@ -501,7 +512,7 @@ body {
 .info-mobile-order__text {
   color: #fff;
   font-size: 21px;
-  line-height: 1.43;
+  line-height: 1.37;
   letter-spacing: -0.2px;
-  margin-block-end: 40px;
+  margin-block-end: 43px;
 }
