--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import"_nullstyle.scss";
 
 body {
-    font-family: Montserrat, sans-serif;
+    font-family: Montserrat;
     color: #2E363E;
 }
 
@@ -15,9 +15,11 @@ body {
 .title {
     font-size: 48px;
     font-weight: 500;
+    letter-spacing: -1px;
 }
 
 .btn {
+    font-family: Montserrat;
     cursor: pointer;
     display: inline-flex;
     justify-content: center;
@@ -31,6 +33,7 @@ body {
     font-size: 18px;
     font-weight: 500;
     line-height: 1.52;
+    letter-spacing: 1.2;
     
     transition: background-color, 0.3s;
     
@@ -68,7 +71,7 @@ body {
     font-size: 11px;
     text-transform: uppercase;
     line-height: 1.5;
-    letter-spacing: 10%;
+    letter-spacing: 1px;
 }
 
 
@@ -76,9 +79,11 @@ body {
 .catalog {
     position: relative;
     overflow: hidden;
+    margin-top: -55px;
 
     &__title {
-        margin-block-end: 80px;
+        padding-block-start: 0px;
+        padding-block-end: 80px;
         text-align: center;
 
         @media(max-width: 860px){
@@ -457,15 +462,17 @@ body {
 /*================================================*/
 
 .order-from-mobile {
-    padding-block-start: 330px;
+    padding-block-start: 300px;
     background: #081130;
     position: relative;
-    display: flex;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
     &::before {
         position: absolute;
         content: '';
-        top: 0px;
+        top: -30px;
         left: 0;
         width: 100%;
         height: 330px;
@@ -482,31 +489,32 @@ body {
         background: url(../img/02\ 1.png) 0 0/cover no-repeat;
     }
 
-    &__container {
-       
-    }
-
-    &__content {
-        //display: flex;
-    }
-
     &__image {
         position: relative;
-       // margin-left: -112px;
-        width: 1090px;
-        height: 1034px;
-        img {
-            object-position: 100%;
+        min-height: 1034px;
+        
+        .image {
+          
+           object-position: right;
         }
         
     }
+    
+    &__content {
+        max-width: 590px;
+        padding-inline-start: 84px;
+        padding-inline-end: 15px;
+
+        padding-block-start: 109px;
+    }
+
+    
 
     &__info {
     }
 }
 .info-mobile-order {
-   // max-width: 481px;
-    //margin-inline-start: 84px;
+  
     &__label {
         margin-block-end: 24px;
     }
@@ -524,9 +532,9 @@ body {
     &__text {
         color: #fff;
         font-size: 21px;
-        line-height: 1.43;
+        line-height: 1.37;
         letter-spacing: -0.2px;
-        margin-block-end: 40px;
+        margin-block-end: 43px;
     }
 
     &__button {
