--- a/css/style.css
+++ b/css/style.css
@@ -460,7 +460,7 @@ body {
 
 /*================================================*/
 .order-from-mobile {
-  padding-block-start: 300px;
+  padding-block-start: 15.625%;
   background: #081130;
   position: relative;
   display: grid;
@@ -472,7 +472,7 @@ body {
   top: -30px;
   left: 0;
   width: 100%;
-  height: 330px;
+  height: 24.737%;
   background: url(../img/01\ 1.png) 0 0/cover no-repeat;
 }
 .order-from-mobile::after {
@@ -481,23 +481,45 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 489px;
+  height: 36.655%;
   background: url(../img/02\ 1.png) 0 0/cover no-repeat;
+}
+@media (max-width: 860px) {
+  .order-from-mobile {
+    grid-template-columns: 1fr;
+  }
+  .order-from-mobile::after {
+    content: none;
+  }
 }
 .order-from-mobile__image {
   position: relative;
-  min-height: 1034px;
+  padding-block: 53.86%;
 }
 .order-from-mobile__image .image {
   -o-object-position: right;
      object-position: right;
 }
+@media (max-width: 860px) {
+  .order-from-mobile__image::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 36.655%;
+    background: url(../img/02\ 1.png) 0 0/cover no-repeat;
+  }
+}
 .order-from-mobile__content {
   max-width: 590px;
-  padding-inline-start: 84px;
+  padding-inline-start: 8.75%;
   padding-inline-end: 15px;
-  padding-block-start: 109px;
+  padding-block-start: 11.355%;
+  padding-block-end: 35px;
+  z-index: 1;
 }
+
 .info-mobile-order__label {
   margin-block-end: 24px;
 }
@@ -509,10 +531,17 @@ body {
   line-height: 60px;
   margin-block-end: 24px;
 }
+@media (max-width: 1210px) {
+  .info-mobile-order__title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+}
 .info-mobile-order__text {
   color: #fff;
   font-size: 21px;
   line-height: 1.37;
   letter-spacing: -0.2px;
   margin-block-end: 43px;
+  text-shadow: 1px 1px #081130;
 }
