--- a/scss/style.scss
+++ b/scss/style.scss
@@ -462,12 +462,15 @@ body {
 /*================================================*/
 
 .order-from-mobile {
-    padding-block-start: 300px;
+    //padding-block-start: 300px;
+    padding-block-start: 15.625%;
     background: #081130;
     position: relative;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
+
+    
 
     &::before {
         position: absolute;
@@ -475,7 +478,8 @@ body {
         top: -30px;
         left: 0;
         width: 100%;
-        height: 330px;
+        //height: 330px;
+        height: 24.737%;
         background: url(../img/01\ 1.png) 0 0/cover no-repeat;
     }
 
@@ -485,32 +489,54 @@ body {
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 489px;
-        background: url(../img/02\ 1.png) 0 0/cover no-repeat;
+        //height: 489px;
+        height: 36.655%;
+        background: url(../img/02\ 1.png) 0 0 /cover no-repeat;
+
+    }
+
+    @media(max-width: 860px){
+        
+        grid-template-columns: 1fr;
+       
+        &::after {
+            content: none;
+        }
     }
 
     &__image {
         position: relative;
-        min-height: 1034px;
-        
+        //min-height: 1034px;
+        padding-block: 53.86%;
+       
         .image {
-          
-           object-position: right;
+            object-position: right;
         }
-        
+
+        @media(max-width: 860px){
+            &::after {
+                position: absolute;
+                content: '';
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                //height: 489px;
+                height: 36.655%;
+                background: url(../img/02\ 1.png) 0 0 /cover no-repeat;
+            }
+        }
     }
     
     &__content {
         max-width: 590px;
-        padding-inline-start: 84px;
+        //padding-inline-start: 84px;
+        padding-inline-start: 8.75%;
         padding-inline-end: 15px;
 
-        padding-block-start: 109px;
-    }
-
-    
-
-    &__info {
+        //padding-block-start: 109px;
+        padding-block-start: 11.355%;
+        padding-block-end: 35px;
+        z-index: 1;
     }
 }
 .info-mobile-order {
@@ -527,6 +553,11 @@ body {
         letter-spacing: -1px;
         line-height: 60px;
         margin-block-end: 24px;
+
+        @media(max-width: 1210px){
+            font-size: 40px;
+            line-height: 1.2;
+        }
     }
 
     &__text {
@@ -535,9 +566,8 @@ body {
         line-height: 1.37;
         letter-spacing: -0.2px;
         margin-block-end: 43px;
-    }
 
-    &__button {
+        text-shadow: 1px 1px #081130; 
     }
 }
 
