pix perf исправлено

--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,16 @@ body {
 .catalog {
   position: relative;
   overflow: hidden;
-  margin-top: -55px;
+  margin-block-start: -57px;
+}
+@media (max-width: 860px) {
+  .catalog {
+    margin-block-start: 50px;
+  }
 }
 .catalog__title {
   padding-block-start: 0px;
-  padding-block-end: 80px;
+  padding-block-end: 79px;
   text-align: center;
 }
 @media (max-width: 860px) {
@@ -169,10 +174,10 @@ body {
   .cards::before {
     position: absolute;
     content: "";
-    width: 170px;
-    height: 174px;
-    top: 130px;
-    left: -110px;
+    width: 250px;
+    height: 250px;
+    top: 80px;
+    left: -165px;
     background: url("../img/berry.png") 0 0/cover no-repeat;
     z-index: 2;
   }
@@ -205,7 +210,8 @@ body {
   flex-direction: column;
 }
 .item-card__image {
-  border-radius: 10px;
+  border-start-start-radius: 10px;
+  border-start-end-radius: 10px;
   overflow: hidden;
   max-width: 100%;
   min-height: 245px;
@@ -216,7 +222,7 @@ body {
   display: flex;
   flex-direction: column;
   padding-inline: 44px;
-  padding-block: 50px;
+  padding-block: 48px;
 }
 @media (max-width: 1024px) {
   .item-card__body {
@@ -234,14 +240,14 @@ body {
   font-size: 24px;
   font-weight: 700;
   line-height: 1.43;
-  margin-inline-end: 12px;
+  padding-block-end: 13px;
 }
 .item-card__description {
   flex-grow: 1;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  padding-block-end: 24px;
+  padding-block-end: 23px;
 }
 @media (max-width: 640px) {
   .item-card__description {
@@ -252,43 +258,20 @@ body {
   font-size: 24px;
   font-weight: 500;
   line-height: 1.5;
-  padding-block-end: 14px;
+  padding-block-end: 16px;
 }
 
 /*================================================*/
-.main {
-  position: relative;
-}
-.main__bg {
-  z-index: -2;
-}
-@media (max-width: 860px) {
-  .main__bg {
-    filter: brightness(40%);
-  }
-}
-.main__body {
-  padding-block-start: 188px;
-  padding-block-end: 525px;
-}
-@media (max-width: 860px) {
-  .main__body {
-    padding-block-start: 60px;
-    padding-block-end: 150px;
-  }
-}
-@media (max-width: 680px) {
-  .main__body {
-    padding-block-start: 50px;
-    padding-block-end: 60px;
-  }
-}
-
 .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   padding-block-start: 37px;
   padding-block-end: 30px;
   color: #fff;
   border-bottom: 1px solid #7E868E;
+  z-index: 2;
 }
 
 .header-body {
@@ -341,6 +324,7 @@ body {
 .header-contact__icon {
   display: block;
   margin-block-start: 5px;
+  margin-right: -2px;
 }
 .header-contact__phone {
   font-size: 20px;
@@ -392,6 +376,35 @@ body {
     display: none;
   }
 }
+.main {
+  position: relative;
+  padding-block-start: 118.5px;
+}
+.main__bg {
+  z-index: -2;
+}
+@media (max-width: 860px) {
+  .main__bg {
+    filter: brightness(40%);
+  }
+}
+.main__body {
+  padding-block-start: 188px;
+  padding-block-end: 525px;
+}
+@media (max-width: 860px) {
+  .main__body {
+    padding-block-start: 60px;
+    padding-block-end: 150px;
+  }
+}
+@media (max-width: 680px) {
+  .main__body {
+    padding-block-start: 50px;
+    padding-block-end: 60px;
+  }
+}
+
 .content-body {
   max-width: 647px;
 }
@@ -495,7 +508,8 @@ body {
 }
 .order-from-mobile__image {
   position: relative;
-  padding-block: 53.86%;
+  padding-block: 55%;
+  margin-inline-end: -30px;
 }
 .order-from-mobile__image .image {
   -o-object-position: right;
@@ -513,10 +527,10 @@ body {
   }
 }
 .order-from-mobile__content {
-  max-width: 590px;
-  padding-inline-start: 8.75%;
+  max-width: 610px;
+  padding-inline-start: 11.7%;
   padding-inline-end: 15px;
-  padding-block-start: 11.355%;
+  padding-block-start: 12%;
   padding-block-end: 35px;
   z-index: 1;
   position: relative;
@@ -566,7 +580,7 @@ body {
 .info-mobile-order__text {
   color: #fff;
   font-size: 21px;
-  line-height: 1.37;
+  line-height: 1.4;
   letter-spacing: -0.2px;
   margin-block-end: 43px;
   text-shadow: 1px 1px #081130;
