--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@ body {
     font-size: 48px;
     font-weight: 500;
     letter-spacing: -1px;
+
 }
 
 .btn {
@@ -595,10 +596,10 @@ body {
 
     &__title {
 
-        font-size: 48px;
+        //font-size: 48px;
         color: #fff;
-        font-weight: 500;
-        letter-spacing: -1px;
+        //font-weight: 500;
+        //letter-spacing: -1px;
         line-height: 60px;
         margin-block-end: 24px;
 
